# reporte_contrataciones_4

./: .gitignore  Cargo.toml  Makefile  Tablas3.sql  combined.txt  doc.md  egui_cheatsheet.md  prompt  promptqwencoder.txt
.cargo/: config.toml
codigo anterior/1/: doc.md
codigo anterior/2/: codigoanterior.txt
data/: Inserts2.sql
python/: data_service.py  data_service.spec  exporters.py  generar_test_db.py  queries.py  requirements.txt
src/: app.rs  config.rs  export.rs  main.rs  redactor.rs
src/db/: analysis.rs  constants.rs  dashboard.rs  explorer.rs  mod.rs  schema.rs  types.rs  utils.rs
src/ui/: charts.rs  mod.rs  redactor_window.rs  sidebar.rs  tabla.rs  theme.rs  widgets.rs
